accordion and collapse styling fixes

--- a/src/components/modus-wc-accordion/modus-wc-accordion.scss
+++ b/src/components/modus-wc-accordion/modus-wc-accordion.scss
@@ -2,3 +2,11 @@
 * This component uses Tailwind CSS and DaisyUI.
 * Only add styles here that should not be applied by Tailwind, Daisy, or the theme.
 */
+
+[data-theme='modus-classic-light'] modus-wc-accordion .modus-wc-collapse {
+  border: 1px solid var(--modus-wc-color-gray-2);
+}
+
+[data-theme='modus-classic-dark'] modus-wc-accordion .modus-wc-collapse {
+  border: 1px solid var(--modus-wc-color-gray-8);
+}
